--- a/Carros/app/build.gradle
+++ b/Carros/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion "26.0.1"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "br.com.livroandroid.carros"
         minSdkVersion 14
@@ -12,6 +12,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -35,26 +36,26 @@ dependencies {
     compile "org.jetbrains.anko:anko-commons:$anko_version"
 
     // Android Support
-    implementation 'com.android.support:appcompat-v7:27.0.2'
+    implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:design:27.0.2'
-    implementation 'com.android.support:recyclerview-v7:27.0.2'
-    implementation 'com.android.support:cardview-v7:27.0.2'
+    implementation 'com.android.support:design:27.1.0'
+    implementation 'com.android.support:recyclerview-v7:27.1.0'
+    implementation 'com.android.support:cardview-v7:27.1.0'
 
     // Google Play Services - Mapas e Localização
-    implementation 'com.google.android.gms:play-services-maps:11.0.2'
-    implementation 'com.google.android.gms:play-services-location:11.0.2'
+    implementation 'com.google.android.gms:play-services-maps:11.8.0'
+    implementation 'com.google.android.gms:play-services-location:11.8.0'
 
     // HTTP e Download Imagens
     implementation 'com.squareup.picasso:picasso:2.5.2'
-    implementation 'com.squareup.okhttp3:okhttp:3.8.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.8.1'
 
     // Google-GSON
-    implementation 'com.google.code.gson:gson:2.8.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
 
     // Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
 
     // Google Room
     compile "android.arch.persistence.room:runtime:$room_version"
@@ -62,9 +63,12 @@ dependencies {
     kapt "android.arch.persistence.room:compiler:$room_version"
 
     // Bus de Eventos
-    compile 'org.greenrobot:eventbus:3.0.0'
-
+    compile 'org.greenrobot:eventbus:3.1.1'
+    
+    // Multidex (https://developer.android.com/studio/build/multidex.html?hl=pt-br)
+    compile 'com.android.support:multidex:1.0.3'
 }
+
 repositories {
     mavenCentral()
 }
