--- a/Carros/build.gradle
+++ b/Carros/build.gradle
@@ -1,9 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.1.3-2'
+    ext.kotlin_version = '1.1.51'
     ext.anko_version = '0.10.0'
-    ext.room_version = '1.0.0-alpha3'
+    ext.room_version = '1.1.0-alpha3'
 
     repositories {
         maven { url 'https://maven.google.com' }
